Bug 380736 - fix bugs in the resize-attached-images functionality and add other improvements r=bienvenu sr=neil